--- a/frontend/docker/Dockerfile
+++ b/frontend/docker/Dockerfile
@@ -1,7 +1,7 @@
 FROM nginx:1.19.0
 WORKDIR /usr/share/nginx/html
 RUN rm -rf ./*
-COPY build/ .
+#COPY build/ .
 RUN rm -f /etc/nginx/conf.d/default.conf
 COPY docker/nginx.conf /etc/nginx/conf.d/default.conf
 
